# ServeModelsWithFastApi

./: Dockerfile  LICENSE  README.md  docker-compose.yml  load_db.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/actions/: models.py
app/data/: ml_models.py
app/db/: postgress.py
app/models/: input_features.py  prediction.py
app/services/: predict.py
